--- a/client-app/src/app/byproducts/add-byproduct-form/add-byproduct-form.component.html
+++ b/client-app/src/app/byproducts/add-byproduct-form/add-byproduct-form.component.html
@@ -13,12 +13,12 @@
     </mat-form-field>
     <mat-form-field appereance="standard" appearance="outline">
       <mat-label>Težina po jed. mere</mat-label>
-      <input matInput type="number" formControlName="weightByUM" />
+      <input matInput type="number" formControlName="weightPerUM" />
       <mat-error>Morate uneti težinu po jedinici mere veću od 0.</mat-error>
     </mat-form-field>
     <mat-form-field >
       <mat-label>Jedinica mere</mat-label>
-      <mat-select matInput formControlName="measurementUnit">
+      <mat-select matInput formControlName="measurementUnitId">
         <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
           um.name
         }}</mat-option>
