--- a/client-app/src/app/byproducts/add-byproduct-form/add-byproduct-form.component.html
+++ b/client-app/src/app/byproducts/add-byproduct-form/add-byproduct-form.component.html
@@ -19,7 +19,7 @@
     <mat-form-field >
       <mat-label>Jedinica mere</mat-label>
       <mat-select matInput formControlName="measurementUnitId">
-        <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
+        <mat-option *ngFor="let um of (measurementUnits$ | async)" [value]="um.id">{{
           um.name
         }}</mat-option>
       </mat-select>
