FE: ngrx load byproducts in add report item and actions hygiene

--- a/client-app/src/app/reports/add-report/add-item/add-item.component.html
+++ b/client-app/src/app/reports/add-report/add-item/add-item.component.html
@@ -14,7 +14,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Izaberite nusproizvod</mat-label>
       <mat-select matInput formControlName="byproduct">
-        <mat-option *ngFor="let byproduct of byproducts" [value]="byproduct">{{
+        <mat-option *ngFor="let byproduct of (byproducts$ | async)" [value]="byproduct">{{
           byproduct.name + " " + "(" + byproduct.measurementUnit.name + ")"
         }}</mat-option>
       </mat-select>
