--- a/client-app/src/app/reports/edit-report/edit-report.component.html
+++ b/client-app/src/app/reports/edit-report/edit-report.component.html
@@ -46,9 +46,9 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Skladište</mat-label>
-      <mat-select matInput formControlName="warehouse" [disabled]="!editModeOn">
+      <mat-select matInput formControlName="warehouseId" [disabled]="!editModeOn">
         <mat-option
-          *ngFor="let warehouse of warehouses"
+          *ngFor="let warehouse of (warehouses$ | async)"
           [value]="warehouse.id"
           >{{ warehouse.name }}</mat-option
         >
@@ -57,8 +57,8 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Zaposleni</mat-label>
-      <mat-select matInput formControlName="employee" [disabled]="!editModeOn">
-        <mat-option *ngFor="let employee of employees" [value]="employee.id">{{
+      <mat-select matInput formControlName="employeeId" [disabled]="!editModeOn">
+        <mat-option *ngFor="let employee of (employees$ | async)" [value]="employee.id">{{
           employee.firstName + " " + employee.lastName
         }}</mat-option>
       </mat-select>
